--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,5 +5,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="title_text_size">20sp</dimen>
+    <dimen name="headline_text_size">24sp</dimen>
+    <dimen name="subheading_text_size">16sp</dimen>
+    <dimen name="normal_text_size">14sp</dimen>
 </resources>
