Change tabs content

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -2,22 +2,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
-        <item android:id="@+id/nav_camara" android:icon="@android:drawable/ic_menu_camera"
-            android:title="Import" />
-        <item android:id="@+id/nav_gallery" android:icon="@android:drawable/ic_menu_gallery"
-            android:title="Gallery" />
-        <item android:id="@+id/nav_slideshow" android:icon="@android:drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
-        <item android:id="@+id/nav_manage" android:icon="@android:drawable/ic_menu_manage"
-            android:title="Tools" />
+        <item android:id="@+id/channel_jdg" android:icon="@android:drawable/ic_menu_camera"
+            android:title="@string/channel_jdg" />
+        <item android:id="@+id/channel_bazar" android:icon="@android:drawable/ic_menu_gallery"
+            android:title="@string/channel_bazar" />
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="Réseaux sociaux">
         <menu>
-            <item android:id="@+id/nav_share" android:icon="@android:drawable/ic_menu_share"
-                android:title="Share" />
-            <item android:id="@+id/nav_send" android:icon="@android:drawable/ic_menu_send"
-                android:title="Send" />
+            <item android:id="@+id/nav_fb" android:icon="@android:drawable/ic_menu_share"
+                android:title="Facebook" />
+            <item android:id="@+id/nav_tw" android:icon="@android:drawable/ic_menu_send"
+                android:title="Twitter" />
         </menu>
     </item>
 
