--- a/app/src/main/res/layout/content_player.xml
+++ b/app/src/main/res/layout/content_player.xml
@@ -8,6 +8,6 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_player"
-    tools:context="com.paocorp.joueurdugrenier.PlayerActivity">
+    tools:context="com.paocorp.joueurdugrenier.youtube.PlayerActivity">
 
 </RelativeLayout>
