--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -5,10 +5,10 @@
     android:background="@drawable/side_nav_bar"
     android:gravity="bottom"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="16sp"
+    android:paddingLeft="16sp"
+    android:paddingRight="16sp"
+    android:paddingTop="16sp"
     android:id="@+id/headerLinearLay"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
@@ -32,16 +32,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginLeft="16sp"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:paddingTop="@dimen/nav_header_vertical_spacing"/>
+            android:paddingTop="16sp"/>
     </LinearLayout>
 
     <TextView
         android:id="@+id/app_desc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
+        android:paddingTop="16sp"
         android:text="@string/app_desc"
         android:textColor="@color/white"/>
 
