--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -18,7 +18,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/channel_img"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxHeight="60sp"
