--- a/app/src/main/res/layout/video_item.xml
+++ b/app/src/main/res/layout/video_item.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    android:padding="10sp">
 
     <ImageView
         android:id="@+id/video_thumbnail"
@@ -10,7 +10,7 @@
         android:layout_height="128dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginRight="20dp" />
+        android:layout_marginRight="10sp" />
 
     <TextView
         android:id="@+id/video_title"
