--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,6 +26,9 @@
     <color name="green_darken3">#2e7d32</color>
     <color name="green_darken4">#1b5e20</color>
     <color name="teal_lighten1">#26a69a</color>
+    <color name="teal_lighten2">#4db6ac</color>
+    <color name="teal_lighten3">#80cbc4</color>
+    <color name="teal_lighten4">#b2dfdb</color>
     <color name="teal">#009688</color>
     <color name="teal_darken1">#00897b</color>
     <color name="teal_darken2">#00796b</color>
