--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,11 +12,12 @@
 
     <ImageView
         android:id="@+id/channel_banner"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <FrameLayout
         android:id="@+id/sample_content_fragment"
+        android:layout_below="@+id/channel_banner"
         android:layout_weight="2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
