--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -12,7 +12,7 @@
         <menu>
             <item android:id="@+id/nav_fb" android:icon="@android:drawable/ic_menu_share"
                 android:title="Facebook" />
-            <item android:id="@+id/nav_tw" android:icon="@android:drawable/ic_menu_send"
+            <item android:id="@+id/nav_tw" android:icon="@drawable/twitter"
                 android:title="Twitter" />
         </menu>
     </item>
