--- a/app/src/main/res/layout/tweet_item.xml
+++ b/app/src/main/res/layout/tweet_item.xml
@@ -29,6 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/twitter_user"
         android:textColor="@color/black"
+        android:autoLink="web"
         android:textSize="@dimen/normal_text_size" />
 
 </RelativeLayout>
