--- a/app/src/main/res/layout/tweet_item.xml
+++ b/app/src/main/res/layout/tweet_item.xml
@@ -24,10 +24,18 @@
         android:textColor="@color/grey_darken2" />
 
     <TextView
-        android:id="@+id/tweet_msg"
+        android:id="@+id/tweet_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/twitter_user"
+        android:textColor="@color/grey_darken2"
+        android:textSize="11sp" />
+
+    <TextView
+        android:id="@+id/tweet_msg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tweet_date"
         android:textColor="@color/black"
         android:autoLink="web"
         android:textSize="@dimen/normal_text_size" />
