--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="red_darken2">#d32f2f</color>
     <color name="red_darken3">#c62828</color>
     <color name="red_darken4">#b71c1c</color>
+    <color name="blue_twitter">#55acee</color>
     <color name="blue">#2196f3</color>
     <color name="blue_darken1">#1e88e5</color>
     <color name="blue_darken2">#1976d2</color>
