--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -19,11 +19,11 @@
 
     <item android:title="Réseaux sociaux">
         <menu>
-            <item android:id="@+id/nav_fb_jdg" android:icon="@android:drawable/ic_menu_share"
+            <item android:id="@+id/nav_fb_jdg" android:icon="@drawable/com_facebook_button_icon"
                 android:title="@string/fb_jdg" />
             <item android:id="@+id/nav_tw_jdg" android:icon="@drawable/twitter"
                 android:title="@string/twitter_jdg" />
-            <item android:id="@+id/nav_fb_aventures" android:icon="@android:drawable/ic_menu_share"
+            <item android:id="@+id/nav_fb_aventures" android:icon="@drawable/com_facebook_button_icon"
                 android:title="@string/fb_aventures" />
         </menu>
     </item>
