--- a/app/src/main/res/drawable/side_nav_bar_green.xml
+++ b/app/src/main/res/drawable/side_nav_bar_green.xml
@@ -1,9 +1,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
     <gradient
-        android:startColor="@color/yellow_darken1"
-        android:centerColor="@color/yellow_darken2"
-        android:endColor="@color/yellow_darken4"
+        android:startColor="@color/green_darken1"
+        android:centerColor="@color/green_darken2"
+        android:endColor="@color/green_darken4"
         android:type="linear"
         android:angle="135"/>
 </shape>
