--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -3,8 +3,8 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/green_darken2</item>
-        <item name="colorPrimaryDark">@color/green_darken4</item>
+        <item name="colorPrimary">@color/yellow_darken2</item>
+        <item name="colorPrimaryDark">@color/yellow_darken4</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
@@ -13,11 +13,11 @@
         <item name="windowNoTitle">true</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:navigationBarColor">@color/green_darken4</item>
+        <item name="android:navigationBarColor">@color/yellow_darken4</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" >
-        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:textColorPrimary">@color/black</item>
     </style>
 
     <style name="AppTheme.Bazar.NoActionBar">
@@ -25,11 +25,11 @@
         <item name="windowNoTitle">true</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:navigationBarColor">@color/yellow_darken4</item>
+        <item name="android:navigationBarColor">@color/green_darken4</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay.Bazar" parent="ThemeOverlay.AppCompat.Dark.ActionBar" >
-        <item name="android:textColorPrimary">@color/black</item>
+        <item name="android:textColorPrimary">@color/white</item>
     </style>
 
     <style name="AppTheme.Twitter.NoActionBar">
