--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,5 +9,6 @@
     <dimen name="headline_text_size">24sp</dimen>
     <dimen name="subheading_text_size">16sp</dimen>
     <dimen name="normal_text_size">14sp</dimen>
+    <dimen name="reduced_text_size">12sp</dimen>
     <dimen name="fab_margin">16dp</dimen>
 </resources>
