--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -23,5 +23,6 @@
         android:layout_height="wrap_content" />
 
     <include layout="@layout/content_offline" />
+    <include layout="@layout/content_search" />
 
 </RelativeLayout>
