--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -29,7 +29,7 @@
             android:gravity="center_horizontal"
             android:layout_alignParentBottom="true"
             android:autoLink="web"
-            android:text="www.paocorp.com" />
+            android:text="paocorp.com" />
 
     </RelativeLayout>
 
