--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -13,7 +13,7 @@
             android:id="@+id/aboutimg"
             android:gravity="center"
             android:keepScreenOn="true"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fitsSystemWindows="true"
             android:adjustViewBounds="true"
