--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -33,6 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:layout_marginLeft="16sp"
+            android:layout_marginStart="16sp"
             android:textColor="@color/black"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:paddingTop="16sp"/>
@@ -48,11 +49,12 @@
 
     <TextView
         android:id="@+id/credits"
-        android:layout_below="@+id/app_desc"
         android:paddingTop="5sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:autoLink="web"
         android:text="@string/app_url"
+        android:textColorLink="@color/black"
         android:textColor="@color/black"/>
 
 </LinearLayout>
