--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -1,12 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:layout_height="match_parent">
 
-    <com.google.android.youtube.player.YouTubePlayerView
-        android:id="@+id/player_view"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content">
 
-</LinearLayout>
+        <com.google.android.youtube.player.YouTubePlayerView
+            android:id="@+id/player_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/vid_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/player_view"
+            android:layout_marginLeft="2sp"
+            android:layout_marginStart="2sp"
+            android:layout_marginTop="5sp"
+            android:textColor="@color/black"
+            android:textSize="@dimen/subheading_text_size"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/vid_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/vid_title"
+            android:layout_marginLeft="2sp"
+            android:layout_marginStart="2sp"
+            android:layout_marginTop="3sp"
+            android:textColor="@color/black"
+            android:textSize="@dimen/normal_text_size" />
+
+        <TextView
+            android:id="@+id/vid_views"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/vid_date"
+            android:layout_marginLeft="2sp"
+            android:layout_marginStart="2sp"
+            android:layout_marginTop="5sp"
+            android:textColor="@color/black"
+            android:textSize="@dimen/normal_text_size"
+            android:textStyle="bold"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/vid_desc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/vid_views"
+            android:layout_marginLeft="2sp"
+            android:layout_marginStart="2sp"
+            android:layout_marginTop="5sp"
+            android:layout_marginBottom="10sp"
+            android:autoLink="web"
+            android:textColor="@color/black"
+            android:textSize="@dimen/normal_text_size" />
+
+    </RelativeLayout>
+</ScrollView>
