--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -25,6 +25,8 @@
                 android:title="@string/twitter_jdg" />
             <item android:id="@+id/nav_fb_aventures" android:icon="@drawable/com_facebook_button_icon"
                 android:title="@string/fb_aventures" />
+            <item android:id="@+id/nav_rate" android:icon="@drawable/ic_star_black_24dp"
+                android:title="@string/rate_app" />
         </menu>
     </item>
 
