--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,8 +7,7 @@
     android:paddingRight="1sp"
     android:paddingTop="1sp"
     android:paddingBottom="1sp"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:showIn="@layout/app_bar_main"
-    tools:context=".MainActivity">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:showIn="@layout/app_bar_main">
 
     <ImageView
         android:id="@+id/channel_banner"
