--- a/app/src/main/res/layout/app_bar_main_bazar.xml
+++ b/app/src/main/res/layout/app_bar_main_bazar.xml
@@ -15,6 +15,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <include layout="@layout/content_main_bazar" />
 
 </android.support.design.widget.CoordinatorLayout>
