--- a/app/src/main/res/layout/content_main_bazar.xml
+++ b/app/src/main/res/layout/content_main_bazar.xml
@@ -18,6 +18,6 @@
     <include layout="@layout/content_offline" />
     <include layout="@layout/content_search" />
 
-    <include layout="@layout/bottom_bar" />
+    <include layout="@layout/bottom_bar_bazar" />
 
 </RelativeLayout>
