--- a/app/src/main/res/layout/content_news.xml
+++ b/app/src/main/res/layout/content_news.xml
@@ -19,14 +19,20 @@
         android:layout_gravity="start"
         android:orientation="vertical">
 
-        <ListView
-            android:id="@+id/list_view_news"
-            android:layout_width="fill_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:background="@null"
-            android:dividerHeight="2dp"
-            android:descendantFocusability="blocksDescendants"/>
+        <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/swipe_refresh_layout_news"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ListView
+                android:id="@+id/list_view_news"
+                android:layout_width="fill_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:background="@null"
+                android:descendantFocusability="blocksDescendants"
+                android:dividerHeight="2dp" />
+        </android.support.v4.widget.SwipeRefreshLayout>
 
         <include layout="@layout/content_offline" />
 
