--- a/app/src/main/res/layout/content_twitter.xml
+++ b/app/src/main/res/layout/content_twitter.xml
@@ -1,7 +1,7 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_marginTop="?attr/actionBarSize"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="?attr/actionBarSize"
     android:orientation="vertical"
     android:padding="@dimen/activity_vertical_margin">
 
@@ -37,10 +37,16 @@
         android:orientation="vertical"
         android:visibility="gone">
 
-        <ListView
-            android:id="@+id/jdg_feed"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/swipe_refresh_layout_twitter"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ListView
+                android:id="@+id/jdg_feed"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </android.support.v4.widget.SwipeRefreshLayout>
     </RelativeLayout>
 
-</RelativeLayout>
+</FrameLayout>
