--- a/app/src/main/res/layout/content_main_bazar.xml
+++ b/app/src/main/res/layout/content_main_bazar.xml
@@ -3,11 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="1sp"
-    android:paddingRight="1sp"
-    android:paddingTop="1sp"
-    android:paddingBottom="1sp"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:showIn="@layout/app_bar_main">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:showIn="@layout/app_bar_main_bazar">
 
     <ImageView
         android:id="@+id/channel_banner"
