--- a/app/src/main/res/layout/content_offline.xml
+++ b/app/src/main/res/layout/content_offline.xml
@@ -3,7 +3,8 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/content_offline"
     android:layout_height="fill_parent"
-    android:layout_width="fill_parent">
+    android:layout_width="fill_parent"
+    android:layout_above="@+id/bottomBar">
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
