--- a/app/src/main/res/layout/content_search.xml
+++ b/app/src/main/res/layout/content_search.xml
@@ -5,6 +5,7 @@
     android:gravity="center"
     android:id="@+id/videos_search_container"
     android:visibility="gone"
+    android:layout_above="@+id/bottomBar"
     android:orientation="vertical">
 
     <ListView
