--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -60,4 +60,11 @@
         <item name="android:windowIsTranslucent">true</item>
     </style>
 
+    <style name="SettingsTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/green_darken4</item>
+        <item name="colorPrimaryDark">@color/green_darken4</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
 </resources>
