--- a/app/src/main/res/layout/bottom_bar_bazar.xml
+++ b/app/src/main/res/layout/bottom_bar_bazar.xml
@@ -1,8 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.roughike.bottombar.BottomBar xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/bottomBarBazar"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
-    android:layout_alignParentBottom="true"
-    app:bb_tabXmlResource="@xml/bottombar_tabs_bazar" />
+    android:layout_height="match_parent"
+    android:id="@+id/bottomContainer">
+
+    <!-- Content Container -->
+
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        app:itemBackground="@color/green_darken2"
+        app:itemIconTint="@drawable/selected_bottom_bazar"
+        app:itemTextColor="@drawable/selected_bottom_bazar"
+        app:menu="@menu/bottom" />
+
+</RelativeLayout>
