--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -53,13 +54,29 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/vid_views"
+            android:layout_marginBottom="10sp"
             android:layout_marginLeft="2sp"
             android:layout_marginStart="2sp"
             android:layout_marginTop="5sp"
-            android:layout_marginBottom="10sp"
             android:autoLink="web"
             android:textColor="@color/black"
             android:textSize="@dimen/normal_text_size" />
+
+        <RelativeLayout
+            android:id="@+id/rel_banner"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/vid_desc"
+            android:layout_marginTop="10sp">
+
+            <com.google.android.gms.ads.AdView
+                android:id="@+id/banner_bottom"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                ads:adSize="BANNER"
+                ads:adUnitId="@string/banner" />
+        </RelativeLayout>
 
     </RelativeLayout>
 </ScrollView>
