--- a/app/src/main/res/layout/content_offline.xml
+++ b/app/src/main/res/layout/content_offline.xml
@@ -2,15 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/content_offline"
-    android:layout_height="fill_parent"
     android:layout_width="fill_parent"
-    android:layout_above="@+id/bottomBar">
+    android:layout_height="fill_parent">
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
-        android:layout_gravity="center"
         android:layout_width="fill_parent"
         android:layout_height="200sp"
+        android:layout_gravity="center"
         android:layout_margin="5dp"
         card_view:cardBackgroundColor="@color/teal_lighten3"
         card_view:cardCornerRadius="2dp"
@@ -19,37 +18,38 @@
         <RelativeLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_centerInParent="true">
+            android:layout_centerInParent="true"
+            android:layout_gravity="center">
 
             <ImageView
                 android:id="@+id/imgCardView"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
-                android:src="@drawable/ic_signal_cellular_off_black_48dp"/>
+                android:src="@drawable/ic_signal_cellular_off_black_48dp" />
 
             <TextView
                 android:id="@+id/textCardView1"
-                android:layout_below="@+id/imgCardView"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:textStyle="bold"
+                android:layout_below="@+id/imgCardView"
+                android:layout_marginTop="5sp"
                 android:gravity="center"
                 android:text="@string/offline"
-                android:layout_marginTop="5sp"
-                android:textColor="@color/black"/>
+                android:textColor="@color/black"
+                android:textStyle="bold" />
 
             <Button
                 android:id="@+id/btn_refresh"
+                android:layout_width="30sp"
+                android:layout_height="30sp"
                 android:layout_below="@+id/textCardView1"
-                android:layout_width="24sp"
-                android:layout_height="24sp"
-                android:layout_marginTop="5sp"
                 android:layout_centerInParent="true"
-                android:onClick="refreshApp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="10sp"
+                android:padding="10sp"
                 android:background="@drawable/ic_refresh_black_24dp"
-                android:layout_gravity="center_horizontal"/>
+                android:onClick="refreshApp" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
