--- a/app/src/main/res/layout/widget_lastvideo.xml
+++ b/app/src/main/res/layout/widget_lastvideo.xml
@@ -10,39 +10,45 @@
         android:layout_height="match_parent"
         android:layout_margin="5sp">
 
-        <ImageView
-            android:id="@+id/video_thumbnail"
-            android:layout_width="96sp"
-            android:layout_height="50sp"
-            android:layout_alignParentTop="true"
-            android:layout_marginRight="5sp" />
+        <RelativeLayout
+            android:id="@+id/mainBlock"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/video_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/video_thumbnail"
-            android:text="@string/offline"
-            android:textColor="@color/black"
-            android:textSize="@dimen/normal_text_size"
-            android:textStyle="bold" />
+            <ImageView
+                android:id="@+id/video_thumbnail"
+                android:layout_width="96sp"
+                android:layout_height="50sp"
+                android:layout_alignParentTop="true"
+                android:layout_marginRight="5sp" />
 
-        <TextView
-            android:id="@+id/video_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/video_title"
-            android:layout_toRightOf="@+id/video_thumbnail"
-            android:textColor="@color/grey_darken2"
-            android:textSize="@dimen/reduced_text_size"
-            android:textStyle="bold" />
+            <TextView
+                android:id="@+id/video_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_toRightOf="@+id/video_thumbnail"
+                android:text="@string/offline"
+                android:textColor="@color/black"
+                android:textSize="@dimen/normal_text_size"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/video_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/video_title"
+                android:layout_toRightOf="@+id/video_thumbnail"
+                android:textColor="@color/grey_darken2"
+                android:textSize="@dimen/reduced_text_size"
+                android:textStyle="bold" />
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/video_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/video_thumbnail"
+            android:layout_below="@+id/mainBlock"
             android:layout_marginTop="2sp"
             android:autoLink="web"
             android:textColor="@color/black"
