--- a/app/src/main/res/layout/widget_lastvideo.xml
+++ b/app/src/main/res/layout/widget_lastvideo.xml
@@ -28,7 +28,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_toRightOf="@+id/video_thumbnail"
-                android:text="@string/offline"
+                android:text="@string/loading"
                 android:textColor="@color/black"
                 android:textSize="@dimen/normal_text_size"
                 android:textStyle="bold" />
