--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -11,35 +11,36 @@
 
         <ImageView
             android:id="@+id/aboutimg"
-            android:gravity="center"
-            android:keepScreenOn="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fitsSystemWindows="true"
-            android:adjustViewBounds="true"
             android:layout_centerInParent="true"
-            android:src="@drawable/logo_jdg"/>
-
-        <ImageView
-            android:id="@+id/loader"
+            android:adjustViewBounds="true"
+            android:fitsSystemWindows="true"
             android:gravity="center"
             android:keepScreenOn="true"
+            android:src="@drawable/logo_jdg" />
+
+        <ProgressBar
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/aboutimg"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_centerInParent="true"
-            android:background="@drawable/ic_cached_black_24dp"/>
+            android:layout_marginTop="20dp"
+            android:indeterminate="true"
+            android:maxHeight="24dip"
+            android:minHeight="24dip"
+            android:theme="@style/LinearProgress" />
 
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:textSize="@dimen/normal_text_size"
-            android:textColorLink="@color/black"
-            android:gravity="center_horizontal"
             android:layout_alignParentBottom="true"
+            android:layout_marginBottom="10dp"
             android:autoLink="web"
-            android:text="paocorp.com" />
+            android:gravity="center_horizontal"
+            android:text="paocorp.com"
+            android:textColorLink="@color/black"
+            android:textSize="@dimen/normal_text_size" />
 
     </RelativeLayout>
 
