--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -13,70 +13,76 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-        <TextView
-            android:id="@+id/vid_title"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/player_view"
-            android:layout_marginLeft="2sp"
-            android:layout_marginStart="2sp"
-            android:layout_marginTop="5sp"
-            android:textColor="@color/black"
-            android:textSize="@dimen/subheading_text_size"
-            android:textStyle="bold" />
+            android:paddingLeft="10sp"
+            android:paddingRight="10sp">
 
-        <TextView
-            android:id="@+id/vid_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/vid_title"
-            android:layout_marginLeft="2sp"
-            android:layout_marginStart="2sp"
-            android:layout_marginTop="3sp"
-            android:textColor="@color/black"
-            android:textSize="@dimen/normal_text_size" />
+            <TextView
+                android:id="@+id/vid_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="2sp"
+                android:layout_marginStart="2sp"
+                android:layout_marginTop="5sp"
+                android:textColor="@color/black"
+                android:textSize="@dimen/subheading_text_size"
+                android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/vid_views"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/vid_date"
-            android:layout_marginLeft="2sp"
-            android:layout_marginStart="2sp"
-            android:layout_marginTop="5sp"
-            android:textColor="@color/black"
-            android:textSize="@dimen/normal_text_size"
-            android:textStyle="bold"
-            android:visibility="gone" />
+            <TextView
+                android:id="@+id/vid_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/vid_title"
+                android:layout_marginLeft="2sp"
+                android:layout_marginStart="2sp"
+                android:layout_marginTop="3sp"
+                android:textColor="@color/black"
+                android:textSize="@dimen/normal_text_size" />
 
-        <TextView
-            android:id="@+id/vid_desc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/vid_views"
-            android:layout_marginBottom="10sp"
-            android:layout_marginLeft="2sp"
-            android:layout_marginStart="2sp"
-            android:layout_marginTop="5sp"
-            android:autoLink="web"
-            android:textColor="@color/black"
-            android:textSize="@dimen/normal_text_size" />
+            <TextView
+                android:id="@+id/vid_views"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/vid_date"
+                android:layout_marginLeft="2sp"
+                android:layout_marginStart="2sp"
+                android:layout_marginTop="5sp"
+                android:textColor="@color/black"
+                android:textSize="@dimen/normal_text_size"
+                android:textStyle="bold"
+                android:visibility="gone" />
 
-        <RelativeLayout
-            android:id="@+id/rel_banner"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/vid_desc"
-            android:layout_marginTop="10sp">
+            <TextView
+                android:id="@+id/vid_desc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/vid_views"
+                android:layout_marginBottom="10sp"
+                android:layout_marginLeft="2sp"
+                android:layout_marginStart="2sp"
+                android:layout_marginTop="5sp"
+                android:autoLink="web"
+                android:textColor="@color/black"
+                android:textSize="@dimen/normal_text_size" />
 
-            <com.google.android.gms.ads.AdView
-                android:id="@+id/banner_bottom"
+            <RelativeLayout
+                android:id="@+id/rel_banner"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                ads:adSize="BANNER"
-                ads:adUnitId="@string/banner" />
-        </RelativeLayout>
+                android:layout_below="@+id/vid_desc"
+                android:layout_marginTop="10sp">
 
+                <com.google.android.gms.ads.AdView
+                    android:id="@+id/banner_bottom"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    ads:adSize="BANNER"
+                    ads:adUnitId="@string/banner" />
+            </RelativeLayout>
+        </RelativeLayout>
     </RelativeLayout>
 </ScrollView>
