--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -21,15 +21,13 @@
             android:src="@drawable/logo_jdg" />
 
         <ProgressBar
-            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-            android:layout_width="match_parent"
+            android:id="@+id/loader"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/aboutimg"
-            android:layout_marginTop="20dp"
+            android:layout_centerInParent="true"
             android:indeterminate="true"
-            android:maxHeight="24dip"
-            android:minHeight="24dip"
-            android:theme="@style/LinearProgress" />
+            android:theme="@style/ProgressWhite"/>
 
         <TextView
             android:layout_width="fill_parent"
