--- a/app/src/main/res/layout/content_news.xml
+++ b/app/src/main/res/layout/content_news.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.paocorp.joueurdugrenier.activities.NewsActivity"
+    tools:context="com.merilonstudio.videosjoueurdugrenier.activities.NewsActivity"
     tools:showIn="@layout/app_bar_news">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
