--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -49,6 +49,10 @@
                 android:icon="@drawable/ic_star_black_24dp"
                 android:title="@string/rate_app" />
             <item
+                android:id="@+id/nav_dev"
+                android:icon="@drawable/ic_android_black_24dp"
+                android:title="@string/dev_page" />
+            <item
                 android:id="@+id/nav_settings"
                 android:icon="@drawable/ic_settings_black_24dp"
                 android:title="@string/action_settings" />
